Add: more links

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <div class="footer">
         <ul>
             <li><a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a></li>
+            <li><a href="mailto:dots.n.spaces@gmail.com">Write us</a></li>
+            <li><a href="https://twitter.com/dots_and_spaces">Tweet us</a></li>
             <li><a href="http://eepurl.com/gk6-A9">Subscribe for updates</a></li>
         </ul>
     </div>
