--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
     </div>
 </div>
-<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
 <script>
   // Initialize Firebase
   var config = {
