--- a/solid-balance.html
+++ b/solid-balance.html
@@ -45,18 +45,14 @@
         </ul>
     </div>
 </div>
-<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58692720-12"></script>
 <script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDnhVjhGLG69m-2b5oFYNtEnGfVeQ9ZZUs",
-    authDomain: "dots-n-spaces-homepage.firebaseapp.com",
-    databaseURL: "https://dots-n-spaces-homepage.firebaseio.com",
-    projectId: "dots-n-spaces-homepage",
-    storageBucket: "dots-n-spaces-homepage.appspot.com",
-    messagingSenderId: "755980343318"
-  };
-  firebase.initializeApp(config);
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-58692720-12');
 </script>
 </body>
 </html>
