--- a/solid-balance.html
+++ b/solid-balance.html
@@ -23,13 +23,37 @@
     <div class="main">
         <div class="main-content">
             <div class="description">
-                <div class="logo">
-                    <img src="img/icon.png">
-                    <div class="placeholder"></div>
-                </div>
-                <div class="text">
+                <div class="header">
                     <h1>Solid Balance</h1>
+                    <div class="logo">
+                        <img src="img/icon.png">
+                    </div>
+                </div>
+                <div class="preview-mobile"><img src="img/preview.png"></div>
+                <div class="text">
                     <h3>Deep insights into your health.</h3>
+                    <div>
+                        <b>Activity</b><br />
+                        Your life to be balanced needs besides <i>push mode</i> also have <i>relax mode</i>, that is why we focus on four core values from your daily activity:<br />
+                        - Workouts<br />
+                        - Walking + Running<br />
+                        - Mindful time<br />
+                        - Sleep.
+                        <br />
+                        <br />
+
+                        Our machine learning models based on your previous activity show you a prediction about your expected results for the current day, and times when will you start finish each activity respectively.
+                        <br /><br />
+
+                        <b>Insights</b><br />
+                        We use statistics and the latest algorithms to provide you new insights about your activity, and health. Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give you a better idea of what your past performance looks like. Also, you can travel back in time to investigate how your activity has changed over time.
+                        <br /><br />
+
+                        <b>Data Privacy</b><br />
+                        Your data never leaves this device. Your privacy - is our priority.<br />
+                    </div>
+                </div>
+                <div class="download">
                     <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8" target="_blank" ><img src="img/appstore.png"></a>
                 </div>
             </div>
