--- a/solid-balance.html
+++ b/solid-balance.html
@@ -34,7 +34,7 @@
                     <h3>Deep insights into your health.</h3>
                     <div>
                         <b>Activity</b><br />
-                        Your life to be balanced needs besides <i>push mode</i> also have <i>relax mode</i>, that is why we focus on four core values from your daily activity:<br />
+                        Your life to be balanced needs besides <i>push mode</i> also have <i>relaxed mode</i>, that is why we focus on four core values from your daily activity:<br />
                         - Workouts<br />
                         - Walking + Running<br />
                         - Mindful time<br />
@@ -42,7 +42,7 @@
                         <br />
                         <br />
 
-                        Our machine learning models based on your previous activity show you a prediction about your expected results for the current day, and times when will you start finish each activity respectively.
+                        Our machine learning models based on your previous activity show you a prediction about your expected results for the current day, and times when will you start/finish each activity respectively.
                         <br /><br />
 
                         <b>Insights</b><br />
