--- a/solid-balance.html
+++ b/solid-balance.html
@@ -46,11 +46,11 @@
                         <br /><br />
 
                         <b>Insights</b><br />
-                        We use statistics and the latest algorithms to provide you new insights about your activity, and health. Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give you a better idea of what your past performance looks like. Also, you can travel back in time to investigate how your activity has changed over time.
+                        Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give you a better idea of what your past performance looks like.
                         <br /><br />
 
                         <b>Data Privacy</b><br />
-                        Your data never leaves this device. Your privacy - is our priority.<br />
+                        Your data never leaves your device. Your privacy - is our priority.<br />
                     </div>
                 </div>
                 <div class="download">
