--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
 <body>
 
 <div class="content">
-    <div></div>
+    <div class="header">
+        <div class="logo">
+            <img src="img/logo.png" class="logo">
+        </div>
+        <div class="top-menu">
+            <ul>
+                <li><a href="/solid-balance.html">Solid Balance</a></li>
+                <li><a href="/snap-assist.html">Snap Assist</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="main">
         <div class="main-content">
             <div class="description">
-                <div class="header">
+                <div class="app-header">
                     <h1>Solid Balance</h1>
                     <div class="logo">
                         <img src="img/icon.png">
