--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="app-header">
                     <h1>Solid Balance</h1>
                     <div class="logo">
-                        <img src="img/icon.png">
+                        <img src="img/solid-balance.png">
                     </div>
                 </div>
-                <div class="preview-mobile"><img src="img/preview.png"></div>
+                <div class="preview-mobile"><img src="img/preview-solid-balance.png"></div>
                 <div class="text">
                     <h3>Deep insights into your health.</h3>
                     <div>
@@ -67,7 +67,7 @@
                     <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8" target="_blank" ><img src="img/appstore.png"></a>
                 </div>
             </div>
-            <div class="preview"><img src="img/preview.png"></div>
+            <div class="preview"><img src="img/preview-solid-balance.png"></div>
         </div>
     </div>
     <div class="footer">
