Add: alt text and ids

--- a/snap-assist.html
+++ b/snap-assist.html
@@ -22,7 +22,7 @@
 <div class="content snap-assist">
     <div class="header">
         <div class="logo">
-            <img src="img/logo.png" class="logo">
+            <img src="img/solid-balance.png" alt="Solid Balance logo">
         </div>
         <div class="top-menu">
             <ul>
@@ -35,7 +35,7 @@
         <div class="main-content">
             <div class="preview device device-macbook-pro device-spacegray">
                 <div class="device-frame">
-                    <img class="device-content" src="img/preview-snap-assist.gif">
+                    <img class="device-content" src="img/preview-snap-assist.gif" alt="Snap Assist preview">
                 </div>
                 <div class="device-stripe"></div>
                 <div class="device-header"></div>
@@ -46,7 +46,7 @@
             <div class="description">
                 <div class="app-header">
                     <div class="logo">
-                        <img src="img/snap-assist.png">
+                        <img src="img/snap-assist.png" alt="Snap Assist logo">
                     </div>
                     <h1>Snap Assist</h1>
                 </div>
@@ -67,20 +67,20 @@
                     </div>
                 </div>
                 <div class="download">
-                    <a href="https://github.com/Dots-n-Spaces/Snap-Assist/releases" target="_blank" alt="" >
+                    <a href="https://github.com/Dots-n-Spaces/Snap-Assist/releases" target="_blank" alt="Download Snap Assist" id="DownloadSnapAssist" >
                         <img src="img/github.png">
                         <span>Download</span>
                     </a>
                 </div>
                 <br /><br />
                 <div>
-                    If you like to buy us coffee ☕️ with a croissant 🥐, you can donate to <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VT7GVV2DR3LZS&source=url" class="donate" alt="Buy us coffee ☕️ with a croissant 🥐">here</a>.
+                    If you like to buy us coffee ☕️ with a croissant 🥐, you can donate to <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VT7GVV2DR3LZS&source=url" id="DonateSnapAssist" class="donate" alt="Buy us coffee ☕️ with a croissant 🥐">here</a>.
                 </div>
             </div>
             <div class="preview-mobile">
                 <div class="device device-macbook-pro device-spacegray">
                     <div class="device-frame">
-                        <img class="device-content" src="img/preview-snap-assist.gif">
+                        <img class="device-content" src="img/preview-snap-assist.gif" alt="Snap Assist preview">
                     </div>
                     <div class="device-stripe"></div>
                     <div class="device-header"></div>
