--- a/solid-balance.html
+++ b/solid-balance.html
@@ -21,7 +21,7 @@
 <div class="content solid-balance">
     <div class="header">
         <div class="logo">
-            <img src="img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
         </div>
         <div class="top-menu">
             <ul>
@@ -36,10 +36,10 @@
                 <div class="app-header">
                     <h1>Solid Balance</h1>
                     <div class="logo">
-                        <img src="img/solid-balance.png">
+                        <img src="img/solid-balance.png" alt="Solid Balance logo">
                     </div>
                 </div>
-                <div class="preview-mobile"><img src="img/preview-solid-balance.png"></div>
+                <div class="preview-mobile"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
                 <div class="text">
                     <h3>Deep insights into your health.</h3>
                     <div>
@@ -64,10 +64,12 @@
                     </div>
                 </div>
                 <div class="download">
-                    <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8" target="_blank" ><img src="img/appstore.png"></a>
+                    <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8" alt="Download Solid Balance" target="_blank" id="DownloadSolidBalance">
+                        <img src="img/appstore.png" alt="AppStore logo">
+                    </a>
                 </div>
             </div>
-            <div class="preview"><img src="img/preview-solid-balance.png"></div>
+            <div class="preview"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
         </div>
     </div>
     <div class="footer">
