--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="content">
     <div class="header">
         <div class="logo">
-            <img src="img/logo.png" class="logo">
+            <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
         </div>
         <div class="top-menu">
             <ul>
