--- a/snap-assist.html
+++ b/snap-assist.html
@@ -22,7 +22,7 @@
 <div class="content snap-assist">
     <div class="header">
         <div class="logo">
-            <img src="img/solid-balance.png" alt="Solid Balance logo">
+            <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
         </div>
         <div class="top-menu">
             <ul>
