--- a/solid-balance.html
+++ b/solid-balance.html
@@ -20,9 +20,9 @@
 
 <div class="content solid-balance">
     <div class="header">
-        <div class="logo">
+        <a href="/" alt="Home page" id="HomePage">
             <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
-        </div>
+        </a>
         <div class="top-menu">
             <ul>
                 <li><a href="/solid-balance.html">Solid Balance</a></li>
