--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <div class="content">
     <div class="header">
         <div class="logo">
-            <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
+            <a href="/" alt="Home page" id="HomePage">
+                <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
+            </a>
         </div>
         <div class="top-menu">
             <ul>
