--- a/snap-assist.html
+++ b/snap-assist.html
@@ -21,9 +21,11 @@
 
 <div class="content snap-assist">
     <div class="header">
-        <a href="/" alt="Home page" id="HomePage">
-            <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
-        </a>
+        <div class="logo">
+            <a href="/" alt="Home page" id="HomePage">
+                <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
+            </a>
+        </div>
         <div class="top-menu">
             <ul>
                 <li><a href="/solid-balance.html">Solid Balance</a></li>
