--- a/solid-balance.html
+++ b/solid-balance.html
@@ -2,95 +2,103 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Solid Balance</title>
-  <meta name="description" content="Solid Balance: Deep insights into your health">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Solid Balance</title>
+    <meta name="description" content="Solid Balance: Deep insights into your health">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
 
-<div class="content solid-balance">
-    <div class="header">
-        <div class="logo">
-            <a href="/" alt="Home page" id="HomePage">
-                <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
-            </a>
+    <div class="content solid-balance">
+        <div class="header">
+            <div class="logo">
+                <a href="/" alt="Home page" id="HomePage">
+                    <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
+                </a>
+            </div>
+            <div class="top-menu">
+                <ul>
+                    <li><a href="/solid-balance.html">Solid Balance</a></li>
+                    <li><a href="/snap-assist.html">Snap Assist</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="top-menu">
+        <div class="main">
+            <div class="main-content">
+                <div class="description">
+                    <div class="app-header">
+                        <h1>Solid Balance</h1>
+                        <div class="logo">
+                            <img src="img/solid-balance.png" alt="Solid Balance logo">
+                        </div>
+                    </div>
+                    <div class="preview-mobile"><img src="img/preview-solid-balance.png" alt="Solid Balance preview">
+                    </div>
+                    <div class="text">
+                        <h3>Deep insights into your health.</h3>
+                        <div>
+                            <b>Activity</b><br />
+                            Your life to be balanced needs besides <i>push mode</i> also have <i>relaxed mode</i>, that
+                            is why we focus on four core values from your daily activity:<br />
+                            - Workouts<br />
+                            - Walking + Running<br />
+                            - Mindful time<br />
+                            - Sleep.
+                            <br />
+                            <br />
+
+                            Our machine learning models based on your previous activity show you a prediction about your
+                            expected results for the current day, and times when will you start/finish each activity
+                            respectively.
+                            <br /><br />
+
+                            <b>Insights</b><br />
+                            Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give
+                            you a better idea of what your past performance looks like.
+                            <br /><br />
+
+                            <b>Data Privacy</b><br />
+                            Your data never leaves your device. Your privacy - is our priority.<br />
+                        </div>
+                    </div>
+                    <div class="download">
+                        <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8"
+                            alt="Download Solid Balance" target="_blank" id="DownloadSolidBalance">
+                            <img src="img/appstore.png" alt="AppStore logo">
+                        </a>
+                    </div>
+                </div>
+                <div class="preview"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
+            </div>
+        </div>
+        <div class="footer">
             <ul>
-                <li><a href="/solid-balance.html">Solid Balance</a></li>
-                <li><a href="/snap-assist.html">Snap Assist</a></li>
+                <li><a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a>
+                </li>
+                <li><a href="mailto:dots.n.spaces@gmail.com">Write us</a></li>
+                <li><a href="https://twitter.com/dots_and_spaces">Tweet us</a></li>
+                <li><a href="http://eepurl.com/gk6-A9">Subscribe for updates</a></li>
             </ul>
         </div>
     </div>
-    <div class="main">
-        <div class="main-content">
-            <div class="description">
-                <div class="app-header">
-                    <h1>Solid Balance</h1>
-                    <div class="logo">
-                        <img src="img/solid-balance.png" alt="Solid Balance logo">
-                    </div>
-                </div>
-                <div class="preview-mobile"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
-                <div class="text">
-                    <h3>Deep insights into your health.</h3>
-                    <div>
-                        <b>Activity</b><br />
-                        Your life to be balanced needs besides <i>push mode</i> also have <i>relaxed mode</i>, that is why we focus on four core values from your daily activity:<br />
-                        - Workouts<br />
-                        - Walking + Running<br />
-                        - Mindful time<br />
-                        - Sleep.
-                        <br />
-                        <br />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58692720-12"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-                        Our machine learning models based on your previous activity show you a prediction about your expected results for the current day, and times when will you start/finish each activity respectively.
-                        <br /><br />
-
-                        <b>Insights</b><br />
-                        Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give you a better idea of what your past performance looks like.
-                        <br /><br />
-
-                        <b>Data Privacy</b><br />
-                        Your data never leaves your device. Your privacy - is our priority.<br />
-                    </div>
-                </div>
-                <div class="download">
-                    <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8" alt="Download Solid Balance" target="_blank" id="DownloadSolidBalance">
-                        <img src="img/appstore.png" alt="AppStore logo">
-                    </a>
-                </div>
-            </div>
-            <div class="preview"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
-        </div>
-    </div>
-    <div class="footer">
-        <ul>
-            <li><a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a></li>
-            <li><a href="mailto:dots.n.spaces@gmail.com">Write us</a></li>
-            <li><a href="https://twitter.com/dots_and_spaces">Tweet us</a></li>
-            <li><a href="http://eepurl.com/gk6-A9">Subscribe for updates</a></li>
-        </ul>
-    </div>
-</div>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58692720-12"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-58692720-12');
-</script>
+        gtag('config', 'UA-58692720-12');
+    </script>
 </body>
+
 </html>
