Move: Loki to the index page

--- a/loki.html
+++ b/loki.html
@@ -18,6 +18,20 @@
 
 <body>
     <div class="content loki">
+        <div class="header">
+            <div class="logo">
+                <a href="/" alt="Home page" id="HomePage">
+                    <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
+                </a>
+            </div>
+            <div class="top-menu">
+                <ul>
+                    <li><a href="/loki.html">Loki</a></li>
+                    <li><a href="/solid-balance.html">Solid Balance</a></li>
+                    <li><a href="/snap-assist.html">Snap Assist</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="main">
             <div class="main-content">
                 <div class="description">
@@ -94,7 +108,7 @@
                             </div>
                         </div>
                         <div class="text">
-                            <b>Expected price per word:</b> $0.16.
+                            <b>Price per word:</b> $0.16.
                             <br /><br />
                             <b>Supported file formats:</b> we do not care about your file format.
                             <br /><br />
