--- a/solid-balance.html
+++ b/solid-balance.html
@@ -27,7 +27,7 @@
             </div>
             <div class="top-menu">
                 <ul>
-                    <li><a href="/loki.html">Loki (early access)</a></li>
+                    <li><a href="/loki.html">Loki</a></li>
                     <li><a href="/solid-balance.html">Solid Balance</a></li>
                     <li><a href="/snap-assist.html">Snap Assist</a></li>
                 </ul>
