--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
 
 <head>
-    <meta charset="utf-8">
-    <title>Solid Balance</title>
-    <meta name="description" content="Solid Balance: Deep insights into your health">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <title>Loki: Github daemon for automating your translation pipeline.</title>
+    <meta name="description" content="Loki: Github daemon for automating your translation pipeline." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="apple-touch-icon" href="icon.png" />
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
-    <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa" />
 </head>
 
 <body>
-
-    <div class="content">
+    <div class="content loki">
         <div class="header">
             <div class="logo">
                 <a href="/" alt="Home page" id="HomePage">
@@ -27,7 +26,7 @@
             </div>
             <div class="top-menu">
                 <ul>
-                    <li><a href="/loki.html">Loki (early access)</a></li>
+                    <li><a href="/loki.html">Loki</a></li>
                     <li><a href="/solid-balance.html">Solid Balance</a></li>
                     <li><a href="/snap-assist.html">Snap Assist</a></li>
                 </ul>
@@ -37,68 +36,172 @@
             <div class="main-content">
                 <div class="description">
                     <div class="app-header">
-                        <h1>Solid Balance</h1>
                         <div class="logo">
-                            <img src="img/solid-balance.png" alt="Solid Balance logo">
+                            <img src="img/loki-logo.png" alt="Loki logo" />
+                        </div>
+                        <h3>
+                            Github daemon for automating your translation pipeline.
+                        </h3>
+                    </div>
+                    <div class="tutorial">
+                        <h2><b>How it works:</b></h2>
+                        <div class="step">
+                            <h2>1. Add Loki as a member to your Github repo.</h2>
+                            <img src="img/step1.png" alt="Github interface to add Loki to the repo">
+                        </div>
+                        <div class="step">
+                            <h2>2. Create your localization files, and leave ones that need translation empty.</h2>
+                            <img src="img/step2.png" alt="Files before translation">
+                        </div>
+                        <div class="step">
+                            <h2>3. Loki will check for updates, and create pull requests with translations.
+                            </h2>
+                            <img src="img/step3.png" alt="Translated filed">
+                        </div>
+                        <div class="step">
+                            <h2>4. Press <b>Merge</b>.</h2>
+                            <img src="img/step4.png" alt="Github merge button">
+                        </div>
+                        <div class="step">
+                            <h2><s>5.</s> Done 🎉🎉🎉</h2>
                         </div>
                     </div>
-                    <div class="preview-mobile"><img src="img/preview-solid-balance.png" alt="Solid Balance preview">
-                    </div>
-                    <div class="text">
-                        <h3>Deep insights into your health.</h3>
-                        <div>
-                            <b>Activity</b><br />
-                            Your life to be balanced needs besides <i>push mode</i> also have <i>relaxed mode</i>, that
-                            is why we focus on four core values from your daily activity:<br />
-                            - Workouts<br />
-                            - Walking + Running<br />
-                            - Mindful time<br />
-                            - Sleep.
-                            <br />
-                            <br />
+                    <hr />
+                    <div class="wrapper">
+                        <div class="text">
+                            <div>
+                                <h2><b>Sign up for a beta access:</b><br /></h2>
+                                <!-- Begin Mailchimp Signup Form -->
+                                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+                                    rel="stylesheet" type="text/css">
+                                <style type="text/css">
+                                    #mc_embed_signup {
+                                        background: #fff;
+                                        clear: left;
+                                        font: 14px Helvetica, Arial, sans-serif;
+                                        width: 100%;
+                                    }
 
-                            Our machine learning models based on your previous activity show you a prediction about your
-                            expected results for the current day, and times when will you start/finish each activity
-                            respectively.
-                            <br /><br />
+                                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                                </style>
+                                <div id="mc_embed_signup">
+                                    <form
+                                        action="https://gmail.us20.list-manage.com/subscribe/post?u=cacc24c3a98ab51bd38418845&amp;id=f747cd2394"
+                                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                        class="validate" target="_blank" novalidate>
+                                        <div id="mc_embed_signup_scroll">
 
-                            <b>Insights</b><br />
-                            Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give
-                            you a better idea of what your past performance looks like.
-                            <br /><br />
+                                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                                placeholder="email address" required>
+                                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
+                                                    type="text" name="b_cacc24c3a98ab51bd38418845_f747cd2394"
+                                                    tabindex="-1" value=""></div>
+                                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+                                                    id="mc-embedded-subscribe" class="button"></div>
+                                        </div>
+                                    </form>
+                                </div>
 
-                            <b>Data Privacy</b><br />
-                            Your data never leaves your device. Your privacy - is our priority.<br />
+                                <!--End mc_embed_signup-->
+                            </div>
                         </div>
-                    </div>
-                    <div class="download">
-                        <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8"
-                            alt="Download Solid Balance" target="_blank" id="DownloadSolidBalance">
-                            <img src="img/appstore.png" alt="AppStore logo">
-                        </a>
+                        <div class="text">
+                            <b>Price per word:</b> $0.16.
+                            <br /><br />
+                            <b>Supported file formats:</b> we do not care about your file format.
+                            <br /><br />
+                            <b>Supported languages:</b>
+                            Arabic,
+                            Bengali,
+                            Bulgarian,
+                            Burmese,
+                            Catalan,
+                            Chinese (Hong Kong),
+                            Chinese (Simplified),
+                            Chinese (Traditional),
+                            Croatian,
+                            Czech,
+                            Danish,
+                            Dutch,
+                            English (British),
+                            Estonian,
+                            Finnish,
+                            Flemish,
+                            French,
+                            French (Canada),
+                            German,
+                            Greek,
+                            Hebrew,
+                            Hindi,
+                            Hungarian,
+                            Icelandic,
+                            Indonesian,
+                            Irish English,
+                            Italian,
+                            Japanese,
+                            Korean,
+                            Latvian,
+                            Lithuanian,
+                            Malay,
+                            Marathi,
+                            Norwegian,
+                            Pashto,
+                            Persian (Farsi),
+                            Polish,
+                            Portuguese (Brazil),
+                            Portuguese (Europe),
+                            Punjabi,
+                            Romanian,
+                            Russian,
+                            Serbian,
+                            Slovak,
+                            Slovenian,
+                            Spanish (Latin America),
+                            Spanish (Mexico),
+                            Spanish (Spain),
+                            Swahili,
+                            Swedish,
+                            Tagalog,
+                            Tamil,
+                            Thai,
+                            Turkish,
+                            Ukrainian,
+                            Urdu,
+                            Vietnamese
+                        </div>
                     </div>
                 </div>
-                <div class="preview"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
             </div>
         </div>
         <div class="footer">
             <ul>
-                <li><a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a>
+                <li>
+                    <a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a>
                 </li>
-                <li><a href="mailto:dots.n.spaces@gmail.com">Write us</a></li>
-                <li><a href="https://twitter.com/dots_and_spaces">Tweet us</a></li>
-                <li><a href="http://eepurl.com/gk6-A9">Subscribe for updates</a></li>
+                <li>
+                    <a href="mailto:dots.n.spaces@gmail.com">Write us</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/dots_and_spaces">Tweet us</a>
+                </li>
+                <li>
+                    <a href="http://eepurl.com/gk6-A9">Subscribe for updates</a>
+                </li>
             </ul>
         </div>
     </div>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58692720-12"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+        window.dataLayer = window.dataLayer || []
+        function gtag() {
+            dataLayer.push(arguments)
+        }
+        gtag('js', new Date())
 
-        gtag('config', 'UA-58692720-12');
+        gtag('config', 'UA-58692720-12')
     </script>
 </body>
 
