--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                     </style>
                     <div id="mc_embed_signup">
-                        <label for="mce-EMAIL">Sign up for a beta access:</label>
+                        <h2 for="mce-EMAIL">Sign up for a beta access:</h2>
                         <form
                             action="https://dots-n-spaces.us20.list-manage.com/subscribe/post?u=cacc24c3a98ab51bd38418845&amp;id=f747cd2394"
                             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
