Migrate to react

--- a/index.html
+++ b/index.html
@@ -1,105 +1,1 @@
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-    <meta charset="utf-8">
-    <title>Solid Balance</title>
-    <meta name="description" content="Solid Balance: Deep insights into your health">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-
-    <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-
-    <div class="content solid-balance">
-        <div class="header">
-            <div class="logo">
-                <a href="/" alt="Home page" id="HomePage">
-                    <img src="img/logo.png" class="logo" alt="Dots and Spaces logo">
-                </a>
-            </div>
-            <div class="top-menu">
-                <ul>
-                    <li><a href="/loki.html">Loki</a></li>
-                    <li><a href="/solid-balance.html">Solid Balance</a></li>
-                    <li><a href="/snap-assist.html">Snap Assist</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="main">
-            <div class="main-content">
-                <div class="description">
-                    <div class="app-header">
-                        <h1>Solid Balance</h1>
-                        <div class="logo">
-                            <img src="img/solid-balance.png" alt="Solid Balance logo">
-                        </div>
-                    </div>
-                    <div class="preview-mobile"><img src="img/preview-solid-balance.png" alt="Solid Balance preview">
-                    </div>
-                    <div class="text">
-                        <h3>Deep insights into your health.</h3>
-                        <div>
-                            <b>Activity</b><br />
-                            Your life to be balanced needs besides <i>push mode</i> also have <i>relaxed mode</i>, that
-                            is why we focus on four core values from your daily activity:<br />
-                            - Workouts<br />
-                            - Walking + Running<br />
-                            - Mindful time<br />
-                            - Sleep.
-                            <br />
-                            <br />
-
-                            Our machine learning models based on your previous activity show you a prediction about your
-                            expected results for the current day, and times when will you start/finish each activity
-                            respectively.
-                            <br /><br />
-
-                            <b>Insights</b><br />
-                            Your lifetime stats for the last 7/30/360 days are summarized on the Insight page to give
-                            you a better idea of what your past performance looks like.
-                            <br /><br />
-
-                            <b>Data Privacy</b><br />
-                            Your data never leaves your device. Your privacy - is our priority.<br />
-                        </div>
-                    </div>
-                    <div class="download">
-                        <a href="https://itunes.apple.com/us/app/solid-balance/id1449868247?ls=1&mt=8"
-                            alt="Download Solid Balance" target="_blank" id="DownloadSolidBalance">
-                            <img src="img/appstore.png" alt="AppStore logo">
-                        </a>
-                    </div>
-                </div>
-                <div class="preview"><img src="img/preview-solid-balance.png" alt="Solid Balance preview"></div>
-            </div>
-        </div>
-        <div class="footer">
-            <ul>
-                <li><a href="https://github.com/Dots-n-Spaces/Policies/blob/master/PrivacyPolicy.md">Privacy Policy</a>
-                </li>
-                <li><a href="mailto:dots.n.spaces@gmail.com">Write us</a></li>
-                <li><a href="https://twitter.com/dots_and_spaces">Tweet us</a></li>
-                <li><a href="http://eepurl.com/gk6-A9">Subscribe for updates</a></li>
-            </ul>
-        </div>
-    </div>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58692720-12"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-58692720-12');
-    </script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Dots & Spaces: Making beautiful meaningful things"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="stylesheet" href="/styles/devices.min.css"><title>Dots & Spaces</title><link href="/static/css/main.8238c64b.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,l,a=r[0],p=r[1],f=r[2],c=0,s=[];c<a.length;c++)l=a[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in p)Object.prototype.hasOwnProperty.call(p,n)&&(e[n]=p[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var p=t[a];0!==o[p]&&(n=!1)}n&&(u.splice(r--,1),e=l(l.s=t[0]))}return e}var n={},o={1:0},u=[];function l(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=e,l.c=n,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,r){if(1&r&&(e=l(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)l.d(t,n,function(r){return e[r]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var a=this.webpackJsonphomepage=this.webpackJsonphomepage||[],p=a.push.bind(a);a.push=r,a=a.slice();for(var f=0;f<a.length;f++)r(a[f]);var i=p;t()}([])</script><script src="/static/js/2.f0147a2a.chunk.js"></script><script src="/static/js/main.139dec56.chunk.js"></script></body></html>
